--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .DS_Store
 /muzickontrol/node_modules/
 /muzickontrol/dist/
+/muzickontrol/build/
+/muzickontrol/config/*.js
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
